Fix and tweak annotation layout: - fix bg/text color issues - make delete icon more visible - re-position annotation color controls (to correspond with velp template) - fix color picker button's bg color

--- a/timApp/static/scripts/tim/velp/annotation.component.scss
+++ b/timApp/static/scripts/tim/velp/annotation.component.scss
@@ -73,7 +73,7 @@
 }
 
 .annotation-info input[type="color"] {
-  background: transparent;
+  /* background: transparent;*/
   cursor: pointer;
 }
 
@@ -115,7 +115,7 @@
     color: white;
   }
 
-  .fulldiv, .points-input, .comment-area, .visible-icon, .help-icon {
+  .fulldiv, .points-input, .comment-area, .visible-icon, .help-icon, .glyphicon {
     color: white;
   }
 
